--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,15 @@ body {
   cursor: pointer;
   color: rgba(255, 255, 255, 0.5);
 }
+.descriptionHeader {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+.descriptionTitle {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.descriptionText {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
